# cyai

./: .gitignore  README.md  TODO.md  link-all.sh
.beads/: issues.jsonl
.claude/: statusline.sh
.claude/review-prompts/: architecture-review.md  code-review.md  healthcheck.md  plan.md  spec.md
agents/: bd-implementer.md
bd-coder/: CLAUDE.md  README.md  pyproject.toml
bd-coder/src/: __init__.py  braintrust_integration.py  filelock.py  main.py
bd-parallel/: pyproject.toml
bd-parallel/bd_parallel/: __init__.py  filelock.py  implementer_prompt.md  main.py
commands/: architecture-review.md  bd-breakdown.md  bd-groom.md  bd-implement.md  bd-parallel.md  code-review.md  diary.md  healthcheck.md  plan-review.md  reflect.md  review-gate.md  review-plan.md  scope.md
docs/: beads-hooks.md  review-gate-setup.md
plans/: plugin-packaging.md  review-gate-v3.md
plugins/amp/: ampcode-plugin.d.ts  package-lock.json  package.json  safety-net.ts  tsconfig.json
prompts/generators/: architecture-review.md  healthcheck.md
prompts/reviewers/: architecture-review.md  code-review.md  healthcheck.md  plan.md  spec.md
skills/beads/: SKILL.md
skills/browser-use/: SKILL.md
skills/databricks-bundle/: SKILL.md
skills/databricks-jobs/: SKILL.md
skills/databricks-sql/: SKILL.md
skills/databricks-unity-catalog/: SKILL.md
skills/dune-sql/: SKILL.md
skills/grimp-architecture/: SKILL.md
skills/mala-logs/: SKILL.md
skills/mala-yaml/: SKILL.md
skills/prompt-engineering/: SKILL.md
skills/pyspark-style/: SKILL.md
skills/simplifying-code/: SKILL.md
(+37 files in other folders)
