[project]
name = "bd-coder"
version = "0.1.0"
description = "Agent SDK orchestrator for parallel beads issue processing"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
    "braintrust>=0.0.180",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bd-coder = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
