[project]
name = "bd-parallel"
version = "0.1.0"
description = "Agent SDK orchestrator for parallel beads issue processing"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
]

[project.scripts]
bd-parallel = "bd_parallel.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
